
2003-07-xx Version 1.31 Beta xxJul03
- In restore print only volumes that will actually be used.
- Fix bextract -- add appropriate breaks in new case code.
- Add a new test -- bsr-opt-test for testing bsr optimization. As usual,
  it pointed out a bug where the directory tree handling code destroyed
  the restore arg list.
- Many updates to the manual.
- Pass prefix links flag to FD.
- Sort list of commands for Console
- Set default FD and SD concurrent jobs to 10.
- Rework the find next volume code in catreq.c to correct some minor
  but subtle logic errors and to eliminate a goto.
- Did spell check on manual.
- Removed bindtextdomain() as it conflicted with RH8.0 headers
- Fixed parse_args to pass address of POOLMEM struct.
- Constrain FileIndexes written to BSR to be within range of Volume.
- Suppress writing volumes to BSR if they are not actually referenced.
- Make FOPTS use alist for match and base entries.
- Pass prefix_links to SD.
- Add command line interface to most items in "update volume=xxx"
- Add command line interface to restore "jobid", "current", "before", "all".
- Add command line "yes" to run command to supress prompt.
- In new alist code, free only if allocated.
- Overload [] with get() code for alist.
- Fixed the code that wrote FirstIndex and LastIndex to the database. It
  was not correct at the end of a volume (basically included indexes in
  the second volume).
- Fixed bscan to work with the new code and to properly build JobMedia
  records.
- Added code to the read end of block.c to properly track Volume bytes,
  blocks, and files. I thought this was not necessary, but it is critical
  for bscan to work correctly.
- Modified read_record to properly track First/LastIndex -- needed by
  bscan.
- Eliminated some old Volume write code.
- Changed RecycleOldestVolume to PurgeOldestVolume
- Added what I hope are the "final" touches for Win32 stuff.  There
  are still a lot of annoying little problems.